			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.05c: *********************************

IMP: (10/31/06, DN) New methods in Geometric class was extended by:
    "Iterator<Poly> getShape(Poly.Builder polyBuilder)"
    "Rectangle2D getLambdaBounds(Rectangle2D r)"
    "Rectangle2D getGridBounds(Rectangle2D r)"

IMP: (10/30/06, DN) Points in ArcInst.getPoly() are aligned to GRID.
   Four variants of arc.getWidth:
     getLambdaFullWidth  - full width in lambda units (same as old getWidth()
     getGridFullWidth - full width in grid units
     getLambdaBaseWidth - base width (GUI selection width) in lambda units.
                          Usually same as full width except for diffusion arcs.
     getGridBaseWidth - base width in grid units.
   Results of GeometryOnNetwork test were updated.

************************* Version 8.05b: *********************************

IMP: (10/30/06, GVG) DIODUMMY layer (gds=56) added into TSMC180.

BUG: (10/28/06, DN) RTree is not fresh after undo (Bug #1252).
FIX: In Cell.update and Cell.updateSubCells add call of "topology.refreshRTree".

BUG: (10/27/06, DN) Constraint system having problems with angled arcs (Bug #1253).
FIX: In "LayoutCell.nonOrthogFixAng" search "bestAI" among arcs connected to the same port
    as other end of "ai".

IMP: (10/25/06, DN) GridWidth of ImmutableArcInst is always even.

BUG: (10/25/06, DN) RTree is not fresh after creating new arc (Bug #1252).
FIX: Call unfreshRTree after arc changes. Rollback lazy RTree creation for now.

IMP: (10/25/06, RK) Non-functional layout generator project settings tab.

IMP: (10/25/06, DN) Layer.Function is enum. Layer.Function.Set is implemented and used in
    Technology.getShapeOfNodes/Arcs methods.

IMP: (10/24/06, DN) Extended API of immutable classes EPoint, ERectangle, ImmutableArcInst.