@@ -283,19 +283,20 @@ public class Topology {
 	{
 		int low = 0;
 		int high = arcs.size()-1;
+        int pick = high; // initially try the last postition
 
 		while (low <= high) {
-			int mid = (low + high) >> 1;
-			ArcInst ai = arcs.get(mid);
+			ArcInst ai = arcs.get(pick);
 			int cmp = TextUtils.STRING_NUMBER_ORDER.compare(ai.getName(), name);
 			if (cmp == 0) cmp = ai.getD().arcId - arcId;
 
 			if (cmp < 0)
-				low = mid + 1;
+				low = pick + 1;
 			else if (cmp > 0)
-				high = mid - 1;
+				high = pick - 1;
 			else
-				return mid; // ArcInst found
+				return pick; // ArcInst found
+			pick = (low + high) >> 1; // try in a middle
 		}
 		return -(low + 1);  // ArcInst not found.
     }
